--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,11 @@ html, body, #root {
     height: 100%;
     background: transparent;
 }
+
+.icon-btn {
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
