--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,10 +8,14 @@ html, body, #root {
     background: transparent;
 }
 
-.icon-btn {
+.as-button {
     cursor: pointer;
 
     &:hover {
-        opacity: 0.8;
+        opacity: 0.7;
+    }
+
+    &:active {
+        opacity: 0.9;
     }
 }
