--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,7 +26,8 @@ html, body, #root {
     padding: 12px;
     border-radius: 8px;
     background: #33333A;
-    box-shadow: 0 6px 12px #999;
+    /*box-shadow: 0 6px 12px #999;*/
+    flex-shrink: 0;
 
     .react-colorful__pointer {
         border: solid 1px #FFFFFF;
