--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -1,7 +1,10 @@
+/* deprecated */
+
 :root {
     --awesome-scrollbar-width: 6px;
     --awesome-scrollbar-height: 6px;
     --awesome-scrollbar-fill: rgba(0, 0, 0, .2);
+    --awesome-scrollbar-track-fill: #cccccc80;
 }
 
 .awesome-scrollbar {
@@ -40,7 +43,7 @@
     &::after {
         content: '';
         position: absolute;
-        background: #fff;
+        background: var(--awesome-scrollbar-track-fill);
         height: 100%;
         top: 0;
         right: 0;
@@ -63,7 +66,6 @@
         height: .4em;
     }
 
-
     &::-webkit-scrollbar,
     &::-webkit-scrollbar-thumb {
         overflow: visible;
@@ -77,7 +79,7 @@
     &::after {
         content: '';
         position: absolute;
-        background: #fff;
+        background: var(--awesome-scrollbar-track-fill);
         width: 100%;
         bottom: 0;
         left: 0;
