--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,11 +14,16 @@ html, body, #root {
     cursor: pointer;
 
     &:hover {
-        opacity: 0.7;
+        opacity: 0.8;
     }
 
     &:active {
         opacity: 0.9;
+    }
+
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
     }
 }
 
