--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,8 +7,12 @@ html, body, #root {
     height: 100%;
     background: transparent;
     font-family: "JetBrains Mono", ShouShu, monospace;
-    user-select: none;
+    /*user-select: none;*/
     overflow: hidden;
+}
+
+img {
+    -webkit-user-drag: none;
 }
 
 .as-button {
