--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -30,6 +30,7 @@
 
     /* region button */
     --primary-button-bg: #0F172A;
+    --secondary-button-bg: #F2F3F5;
     /* endregion */
 
     /* region card */
