--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -47,10 +47,7 @@
 }
 
 @font-face {
-    font-family: 'ShouShu';
-    src: url('/fonts/ShouShu.woff2') format('woff2'),
-    url('/fonts/ShouShu.woff') format('woff');
-    font-weight: normal;
-    font-display: swap;
+    font-family: 'YouShe';
+    src: url('/fonts/YSHaoShenTi.ttf') format('truetype');
 }
 
