feat: extra linked style

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,6 +69,18 @@ textarea {
     }
 }
 
+.sticker-card {
+    width: 176px;
+    height: 224px;
+}
+
+.sticker-card-wrapper {
+    display: grid;
+    gap: 16px;
+    grid-template-columns: repeat(auto-fill, 176px);
+    grid-template-rows: repeat(auto-fill, 224px);
+}
+
 /* third party */
 
 .ms-container > .ms-track-box { /* FIXME: see https://github.com/MinJieLiu/mac-scrollbar/pull/34 */
