--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -85,7 +85,11 @@ textarea {
 /* third party */
 
 .ms-container > .ms-track-box { /* FIXME: see https://github.com/MinJieLiu/mac-scrollbar/pull/34 */
+    --ms-z-index: 9;
     width: 100%;
+}
+.ms-theme-light {
+    --ms-thumb-color: #D9D9D9;
 }
 
 .react-colorful { /* react-colorful */
