--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,6 +53,26 @@ textarea {
     }
 }
 
+.hover-underline {
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        height: 1px;
+        width: 0;
+        left: 50%;
+        background-color: currentColor;
+        transition: all 0.3s ease-in-out;
+    }
+
+    &:hover::after {
+        width: 100%;
+        left: 0;
+    }
+}
+
 .collection-card-badge {
     --badge-width: 32px;
     --badge-background: #EDEDED;
